--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <div id="app">Loading...</div>
+    <div id='ui'>
+        <button id='addDonut'>Factory</button>
+        <button id='addBank'>Bank</button>
+        <button id='addStore'>Store</button>
+        <button id='redraw'>redraw</button>
+        <counter id='money'></counter>
+        <counter id='donuts'></counter>
+    </div>
+    <div id="app"></div>
 </body>
 </html>
