--- a/src/template.html
+++ b/src/template.html
@@ -14,6 +14,7 @@
         <counter id='money'></counter>
         <counter id='donuts'></counter>
     </div>
+    <canvas id="play"></canvas>
     <div id="app"></div>
 </body>
 </html>
