hacked together an inspector

--- a/src/template.html
+++ b/src/template.html
@@ -16,5 +16,13 @@
     </div>
     <canvas id="play"></canvas>
     <div id="app"></div>
+    <div id="dock">
+        <div class="window">
+            <div class="window-title">
+                Inspector
+            </div>
+            <div class="window-contents">
+            </div>
+    </div>
 </body>
 </html>
