--- a/src/template.html
+++ b/src/template.html
@@ -7,10 +7,9 @@
 </head>
 <body>
     <div id='ui'>
-        <button id='addDonut'>Factory</button>
-        <button id='addBank'>Bank</button>
-        <button id='addStore'>Store</button>
-        <button id='redraw'>redraw</button>
+        <button id='addDonut'>+ Factory</button>
+        <button id='addBank'>+ Bank</button>
+        <button id='addStore'>+ Store</button>
         <counter id='money'></counter>
         <counter id='donuts'></counter>
     </div>
